compiler/testData/diagnostics/tests/enum/enumWithEmptyName.kt
// FIR_IDENTICAL
// FIR_IDE_IGNORE
enum class<!SYNTAX!><!> {
}
